[package]
name = "hancock"
version = "1.2.0"
edition = "2021"


[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "hancock"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo", "derive", "env", "wrap_help"] }
openssl = "0.10.38"
path-absolutize = "3.0.12"
shellexpand = "2.1.0"

[features]
