[package]
name = "hancock"
authors = ["Galen Guyer <galen@galenguyer.com>"]
version = "1.3.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "hancock"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["cargo", "derive", "env", "wrap_help"] }
dirs = "4.0.0"
dotenvy = "0.15.1"
openssl = "0.10.38"
path-absolutize = "3.0.12"
shellexpand = "2.1.0"
