[package]
name = "hancock"
authors = ["Galen Guyer <galen@galenguyer.com>"]
version = "1.5.3"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "hancock"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caps = "0.5.5"
clap = { version = "4.1.8", features = ["cargo", "derive", "env", "wrap_help"] }
dirs = "4.0.0"
dotenvy = "0.15.6"
openssl = "0.10.45"
path-absolutize = "3.0.14"
shellexpand = "3.0.0"
